--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -15,7 +15,7 @@ day05 = { path = "../day05" }
 day06 = { path = "../day06" }
 day07 = { path = "../day07" }
 day08 = { path = "../day08" }
-# day09 = { path = "../day09" }
+day09 = { path = "../day09" }
 # day10 = { path = "../day10" }
 # day11 = { path = "../day11" }
 # day12 = { path = "../day12" }
