--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -17,7 +17,7 @@ day07 = { path = "../day07" }
 day08 = { path = "../day08" }
 day09 = { path = "../day09" }
 day10 = { path = "../day10" }
-# day11 = { path = "../day11" }
+day11 = { path = "../day11" }
 # day12 = { path = "../day12" }
 # day13 = { path = "../day13" }
 # day14 = { path = "../day14" }
