--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -20,7 +20,7 @@ day10 = { path = "../day10" }
 day11 = { path = "../day11" }
 day12 = { path = "../day12" }
 day13 = { path = "../day13" }
-# day14 = { path = "../day14" }
+day14 = { path = "../day14" }
 # day15 = { path = "../day15" }
 # day16 = { path = "../day16" }
 # day17 = { path = "../day17" }
