--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "runner"
 version = "0.1.0"
-authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
+authors = ["GustavLindqvist <gustav.lindqvist000@gmail.com>"]
 edition = "2021"
 
 [dependencies]
@@ -21,13 +21,13 @@ day11 = { path = "../day11" }
 day12 = { path = "../day12" }
 day13 = { path = "../day13" }
 day14 = { path = "../day14" }
-# day15 = { path = "../day15" }
+day15 = { path = "../day15" }
 # day16 = { path = "../day16" }
-# day17 = { path = "../day17" }
+day17 = { path = "../day17" }
 # day18 = { path = "../day18" }
 # day19 = { path = "../day19" }
-# day20 = { path = "../day20" }
-# day21 = { path = "../day21" }
+day20 = { path = "../day20" }
+day21 = { path = "../day21" }
 # day22 = { path = "../day22" }
 # day23 = { path = "../day23" }
 # day24 = { path = "../day24" }
